--- a/style.css
+++ b/style.css
@@ -1,30 +1,47 @@
-
 body {
     text-align: center;
+    font-family: 'Arial', sans-serif;
+    background-color: #f0f0f0;
 }
 
 .container {
     margin-top: 50px;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: inline-block;
 }
 
-.input-group {
+h1 {
+    font-family: 'Cambria Math', serif;
+    font-size: 24px;
     margin-bottom: 20px;
 }
 
 .input-group input {
-    width: 700px;
+    width: 100%;
+    max-width: 800px; /* Thay đổi giá trị width tại đây */
     height: 50px;
     padding: 5px;
     font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
+
 
 .btn {
     padding: 10px 20px;
     font-size: 16px;
+    background-color: #008CBA;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
 }
 
 .result {
     font-size: 20px;
-    
     font-family: 'Cambria Math', serif;
+    margin-top: 20px;
 }
